--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-numpy
-matplotlib
-scikit-learn
-tensorflow
+streamlit>=1.30.0
+pandas>=1.5.3
+numpy>=1.23.0
+scikit-learn>=1.2.2
+matplotlib>=3.7.0
+tensorflow>=2.11.0
